# AIDEMO

./: .gitignore  README.md
Client/: .env.ci  .env.development  .env.production  .env.qa  package-lock.json  package.json
Client/public/: index.html
Client/src/: app.css  types.d.ts
Client/src/config/: app-project-menu.tsx  app-route.tsx
backend/: .env.ci  .env.development  .env.production  .env.qa  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  start.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py  add_document_status_fields.py
backend/app/: main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: chat.py  documents.py  llm.py  rag.py
backend/app/core/: config.py  database.py  logger.py  security.py
backend/app/dependencies/: database.py
backend/app/models/: __init__.py  chat.py  document.py  llm.py
backend/app/schemas/: __init__.py  chat.py  document.py  llm.py  processing_status.py
backend/app/services/: amazon_q_service.py  document_processor.py  document_service.py  enhanced_rag_service.py  llm_service.py  rag_service.py  vector_service.py  vector_store.py
backend/app/utils/: embedding_utils.py  file_utils.py  storage.py
backend/notebook/: document.ipynb
backend/tests/: test_chat.py  test_documents.py
backendRAGSample/: .env  app.py  test.txt  typesense.ipynb
backendRAGSample/agenticrag/: 1-agenticrag.ipynb
backendRAGSample/faiss_store/: faiss.index  metadata.pkl
backendRAGSample/notebook/: document.ipynb
backendRAGSample/src/: search.py  vectorstore.py
(+32 files in other folders)
